workshop/content/solutions/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-demo-app
  labels:
    app: k8s-demo-app
spec:
  rules:
  - host: k8s-demo-app-lab-st-test-w01-s001.192.168.64.14.nip.io
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: k8s-demo-app
            port: 
              number: 8080
